
Erläuterungen zu den Status finden Sie unter https://docs.netapp.com/us-en/bluexp-classification/task-managing-repo-scanning.html["Scaneinstellungen ändern"].



== 15 Mai 2024



=== Version 1.31

.Klassifizierung ist als zentraler Service in BlueXP erhältlich
Die BlueXP Klassifizierung ist jetzt als zentrale Funktion in BlueXP ohne Aufpreis für bis zu 500 tib gescannte Daten verfügbar. Es ist keine Klassifizierungslizenz oder kostenpflichtiges Abonnement erforderlich. Da wir uns bei der BlueXP Klassifizierungsfunktion auf das Scannen von NetApp Storage-Systemen mit dieser neuen Version konzentrieren, stehen einige ältere Funktionen nur Kunden zur Verfügung, die zuvor für eine Lizenz bezahlt hatten. Die Nutzung dieser älteren Funktionen läuft ab, wenn der bezahlte Vertrag sein Enddatum erreicht.

link:reference-free-paid.html["Erfahren Sie mehr über die veralteten Funktionen"].



== 01. April 2024



=== Version 1.30

.Unterstützung für die Klassifizierung von RHEL v8.8 und v9.3 BlueXP hinzugefügt
Diese Version bietet Unterstützung für Red hat Enterprise Linux v8.8 und v9.3 zusätzlich zu zuvor unterstützten 9.x, für die Podman anstelle der Docker Engine erforderlich ist. Dies gilt für jede manuelle On-Premises-Installation der BlueXP Klassifizierung.

Für die folgenden Betriebssysteme ist die Verwendung der Podman Container-Engine erforderlich. Sie erfordern die BlueXP-Klassifikation Version 1.30 oder höher: Red hat Enterprise Linux Version 8.8, 9.0, 9.1, 9.2 und 9.3.

Weitere Informationen zu https://docs.netapp.com/us-en/bluexp-classification/task-deploy-overview.html["Übersicht über Implementierungen zur BlueXP Klassifizierung"].

Die BlueXP Klassifizierung wird unterstützt, wenn Sie den Connector auf einem lokalen RHEL 8- oder 9-Host installieren. Es wird nicht unterstützt, wenn sich der RHEL 8- oder RHEL 9-Host in AWS, Azure oder Google Cloud befindet.

.Option zum Aktivieren der Sammlung des Überwachungsprotokolls entfernt