@@ -2560,7 +2560,6 @@
   <block id="c01242a219d7b0beaf6377621fd10547" category="doc">Scannen von Objekt-Storage mithilfe des S3-Protokolls</block>
   <block id="1ba8a6d88a1ff9a34215586899b08a1e" category="paragraph">Sie können managen, wie Ihre Daten in jeder Ihrer Arbeitsumgebungen und Datenquellen gescannt werden. Sie können die Änderungen auf Repository-Basis vornehmen. Dies bedeutet, dass Sie je nach Art der zu scannenden Datenquelle Änderungen für jedes Volume, Schema, jeden Benutzer usw. vornehmen können.</block>
   <block id="4cf46b88592b20071552593714707a46" category="paragraph">Wenn Sie zunächst *Alle Volumes zuweisen* oder *alle Volumes zuordnen und klassifizieren* ausgewählt haben, wenn Sie die BlueXP-Klassifizierung für die Arbeitsumgebung aktiviert haben, in der sich das Quell-Volume befindet, wird die BlueXP-Klassifizierung das neue geklonte Volume automatisch scannen. Wenn Sie eine dieser Optionen zunächst nicht verwendet haben, müssen Sie dieses neue Volume scannen <block ref="9c238ad6b45b928020692cb5de74fd06" category="inline-link-macro-rx"></block>.</block>
-  <block id="ac229efd3fa61c5457dcab252996be0b" category="paragraph">Die BlueXP Klassifizierung ist jetzt als zentrale Funktion in BlueXP ohne Aufpreis für bis zu 500 tib gescannte Daten verfügbar. Es ist keine Klassifizierungslizenz oder kostenpflichtiges Abonnement erforderlich. Da wir uns bei der BlueXP Klassifizierungsfunktion auf das Scannen von NetApp Storage-Systemen mit dieser neuen Version konzentrieren, stehen einige ältere Funktionen nur Kunden zur Verfügung, die zuvor für eine Lizenz bezahlt hatten. Die Nutzung dieser älteren Funktionen läuft ab, wenn der bezahlte Vertrag sein Enddatum erreicht.</block>
   <block id="3607a722a9a09bb6d405f4d84609e858" category="inline-link-macro">Erfahren Sie mehr über die veralteten Funktionen</block>
   <block id="1a50d9154328b370f6d9bbbab041964a" category="paragraph"><block ref="671322b9b43cc49264f86b21ef88a11d" category="inline-link-macro-rx"></block>.</block>
   <block id="e2175eca7cd7227e608f98540d53af5e" category="paragraph">Die Version hat außerdem die folgenden Optionen entfernt:</block>
@@ -2604,7 +2603,6 @@
   <block id="e22ac25b066b201473de7aa700ef5d92" category="cell">Preisgestaltung</block>
   <block id="b24ce0cd392a5b0b8dedc66c25213594" category="cell">Kostenlos</block>
   <block id="3b8f7696879f77dfc8c74aa8df8db24b" category="cell">Kapazität</block>
-  <block id="1210ad5d6a7beaf8ab7fd7d0808a95ca" category="cell">Begrenzt auf 500 TB</block>
   <block id="a9cec06f0851d8f2722f032a0e63c115" category="cell">Fähigkeit, Metadaten aus Dateien zu sehen*</block>
   <block id="4f40caf952f66945a674f638c61be8d9" category="paragraph">*Die folgenden Metadaten werden während der Mapping-Scans aus Dateien extrahiert:</block>
   <block id="10fd66f5b4802aee3a88de2a537a57b4" category="list-text">Genutzte Kapazität</block>
@@ -3555,4 +3553,11 @@ Daten Von Business-Applikationen</block>
   <block id="c10aaeed86973ee0f442f2e7b73b80b8" category="paragraph">Weitere Informationen finden Sie unter <block ref="c56cfb642e9d697265520a2d16e8cbad" category="inline-link-macro-rx"></block>.</block>
   <block id="4c59149345d32f10d4c1edb221d77028" category="paragraph">Sie können jetzt weitere Informationen zu Dateibesitzern für erfasste Dateien auf der Registerkarte „Untersuchung“ anzeigen. Suchen Sie beim Anzeigen der Metadaten für eine Datei auf der Registerkarte „Untersuchung“ den Dateibesitzer und wählen Sie dann **Details anzeigen** aus, um den Benutzernamen, die E-Mail-Adresse und den SAM-Kontonamen anzuzeigen. Sie können auch andere Elemente anzeigen, die diesem Benutzer gehören. Diese Funktion ist nur in Arbeitsumgebungen mit Active Directory verfügbar.</block>
   <block id="476669d16044da6b8fccc04e3a65c887" category="paragraph">Weitere Informationen finden Sie unter <block ref="202490d1a2feeed942d0b33752539ffd" category="inline-link-macro-rx"></block>.</block>
+  <block id="ba0582c1a4216adac557c97d2f92f869" category="inline-link-macro">einen anderen Connector installieren</block>
+  <block id="bb421402dbabe6eec32567511e69bc2a" category="inline-link-macro">eine weitere Klassifizierungsinstanz bereitstellen</block>
+  <block id="7473cbb9b768b471bd45e7579b544a3a" category="inline-link-macro">Arbeiten Sie mit mehreren Anschlüssen</block>
+  <block id="c430d0ad1a785912ff6e7f2d659d752f" category="paragraph">Die BlueXP classification begrenzt die Datenmenge nicht. Jeder Connector unterstützt das Scannen und Anzeigen von 500 TiB Daten. Um mehr als 500 TiB Daten zu scannen, <block ref="a34b864875c7f2ebc4a815c94a375e43" category="inline-link-macro-rx"></block> Dann <block ref="a51ca3e7fcece55a05339015489757d6" category="inline-link-macro-rx"></block> . + Die BlueXP -Benutzeroberfläche zeigt Daten eines einzelnen Konnektors an. Tipps zur Anzeige von Daten mehrerer Konnektoren finden Sie unter <block ref="5255e271b4118330c3aac09d32603a12" category="inline-link-macro-rx"></block> .</block>
+  <block id="551fbc3b7472150a5293373b773972d7" category="cell">Begrenzt auf 500 TiB*</block>
+  <block id="acdf9d63036f9706b8165f6f6a7117da" category="paragraph">{Sternchen} include::_include/connector-limit.adoc[]</block>
+  <block id="e8c9a8c8c457fc72bf3b116575089845" category="paragraph">Die BlueXP classification ist jetzt als Kernfunktion innerhalb von BlueXP ohne zusätzliche Kosten für bis zu 500 TiB gescannter Daten pro Connector verfügbar. Es ist keine Klassifizierungslizenz oder kostenpflichtiges Abonnement erforderlich. Da wir uns bei der BlueXP Klassifizierungsfunktion auf das Scannen von NetApp Storage-Systemen mit dieser neuen Version konzentrieren, stehen einige ältere Funktionen nur Kunden zur Verfügung, die zuvor für eine Lizenz bezahlt hatten. Die Nutzung dieser älteren Funktionen läuft ab, wenn der bezahlte Vertrag sein Enddatum erreicht.</block>
 </blocks>
