@@ -171,6 +171,9 @@ Nach dem ersten Scan scannt die BlueXP -Klassifizierung Ihre Daten fortlaufend 
 Sie können Scans auf Volume- oder Datenbankschemaebene aktivieren und deaktivieren.
 
 
+NOTE: Die BlueXP classification begrenzt die Datenmenge nicht. Jeder Connector unterstützt das Scannen und Anzeigen von 500 TiB Daten. Um mehr als 500 TiB Daten zu scannen, link:https://docs.netapp.com/us-en/bluexp-setup-admin/concept-connectors.html#connector-installation["einen anderen Connector installieren"^] Dann link:https://docs.netapp.com/us-en/bluexp-classification/task-deploy-overview.html["eine weitere Klassifizierungsinstanz bereitstellen"] . + Die BlueXP -Benutzeroberfläche zeigt Daten eines einzelnen Konnektors an. Tipps zur Anzeige von Daten mehrerer Konnektoren finden Sie unter link:https://docs.netapp.com/us-en/bluexp-setup-admin/task-manage-multiple-connectors.html#switch-between-connectors["Arbeiten Sie mit mehreren Anschlüssen"^] .
+
+
 
 == Was ist der Unterschied zwischen Mapping und Classification Scans
 
